[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cycling-gui"
version = "0.1.0"
description = "Python port of the GUI cycling optimal-control demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "casadi>=3.6.7",
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "PyQt5>=5.15",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
cycling-gui = "cycling_gui.__main__:main"

[tool.setuptools]
packages = ["cycling_gui"]
include-package-data = true

[tool.setuptools.package-data]
cycling_gui = ["data/*.json"]

